# ML_SOL_2

./: README.md  main.py  optimizer.py  plot.py  pyproject.toml  requirements.txt  sol.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
dataset/: download_dataset.py
model/: catboost_model.cbm  lightgbm_model.txt
