[project]
name = "sol-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "numpy~=2.3",
    "pandas~=2.3",
    "scikit-learn~=1.6",
    "seaborn>=0.13.2",
    "xgboost>=3.0.3",
]
