[project]
name = "sol-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<=3.11.9"
dependencies = [
    "catboost>=1.2.8",
    "holidays>=0.78",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "numpy==1.26.4",
    "optuna>=4.4.0",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "tensorflow==2.19.0",
    "xgboost>=2.1.4",
]
